[gd_scene load_steps=8 format=3 uid="uid://dqdwex5dde6f0"]

[ext_resource type="Texture2D" uid="uid://x4107bnuhi5v" path="res://assets/shield/spr_shield_small.png" id="1_cy6sh"]
[ext_resource type="Script" path="res://Scenes/shield.gd" id="1_nchfh"]
[ext_resource type="PackedScene" uid="uid://dwxvhkwxljqn7" path="res://Scenes/health_bar.tscn" id="3_vuw1s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3156"]
radius = 30.1496

[sub_resource type="Animation" id="Animation_8atds"]
resource_name = "throb"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.556863, 0.556863, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hkmqh"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.984314, 0.211765, 0.160784, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_go0gl"]
_data = {
"hit": SubResource("Animation_hkmqh"),
"throb": SubResource("Animation_8atds")
}

[node name="Shield" type="Area2D"]
rotation = -1.5708
collision_mask = 26
script = ExtResource("1_nchfh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_cy6sh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b3156")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_go0gl")
}
autoplay = "throb"

[node name="HealthBar" parent="." instance=ExtResource("3_vuw1s")]
offset_left = -53.0
offset_top = -5.0
offset_right = -3.0
offset_bottom = -1.0
rotation = 1.5708

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
